# legalallies_bot

./: .gitignore  command.txt  pyproject.toml  tasks.md
chatbot/ai_agent/: __init__.py  agent.py  chat_history.py  date_agent.py  dependencies.py  models.py  prompts.py
chatbot/ai_agent/tests/: conftest.py  test_date_agent.py
chatbot/ai_agent/tools/: date_resolver.py  ocr.py  services.py  user_data.py
chatbot/api/: chat_router.py  main.py  telegram_bot.py  whatsapp_router.py
chatbot/api/utils/: filesystem.py  message_handler.py  message_queue.py  models.py  security.py  text.py  webhook_parser.py
chatbot/audio/: audio_converter.py  stt.py
chatbot/audio/tests/: test_audio_converter.py
chatbot/core/: config.py  logging_conf.py  sentry.py
chatbot/db/: schema.py  services.py
chatbot/db/tests/: test_services.py
chatbot/messaging/: telegram_notifier.py  whatsapp.py
chatbot/messaging/tests/: test_telegram.py  test_whatsapp.py
scripts/: run_telegram_bot.py  test_agent_repl.py
