[project]
name = "cheese-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "asyncpg>=0.31.0",
    "databases>=0.9.0",
    "fastapi>=0.135.1",
    "psycopg2>=2.9.11",
    "pydantic-ai>=1.63.0",
    "pytest>=9.0.2",
    "python-json-logger>=4.0.0",
    "python-telegram-bot>=22.6",
    "sentry-sdk>=2.54.0",
    "sqlalchemy>=2.0.47",
]
